objects/SpS_Routing_Table__c.object
<CustomObject>
    <fields>
        <fullName>PLACE__c</fullName>
        <externalId>true</externalId>
        <label>PLACE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POSTCODE__c</fullName>
        <externalId>true</externalId>
        <label>POSTCODE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POSTTOWN__c</fullName>
        <externalId>true</externalId>
        <label>POSTTOWN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>SpS Routing Table</label>
    <nameField>
        <displayFormat>SpS_RT-{00000000}</displayFormat>
        <label>SpS Routing Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sps Routing Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>